--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8080
 
 #spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=namdang
-spring.datasource.url= jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.password=root
+spring.datasource.url= jdbc:mysql://localhost:33061/database?useUnicode=true&characterEncoding=UTF-8
 
 # ===============================
 # JPA / HIBERNATE
